# omega-pipeline

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  requirements-dev.txt
.claude/skills/brenda-director/: SKILL.md
.claude/skills/deborah-researcher/: SKILL.md
adapters/: __init__.py  _mock_content.py  factory.py  higgsfield.py  llm.py  store.py  suno.py
agents/: __init__.py  base.py  crew.py
agents/concept/: README.md  __init__.py  agent.py  prompt.md
agents/critic/: README.md  __init__.py  agent.py  prompt.md
agents/director/: README.md  __init__.py  agent.py  prompt.md
agents/editor/: README.md  __init__.py  agent.py
agents/prompt_engineer/: README.md  __init__.py  agent.py
agents/render/: README.md  __init__.py  agent.py
agents/researcher/: README.md  __init__.py  agent.py  prompt.md
agents/scriptwriter/: README.md  __init__.py  agent.py  prompt.md
agents/shorts/: README.md  __init__.py  agent.py
config/: channel-dna.md  models.json  voice-recipe.json
config/visual-refs/: README.md
core/: __init__.py  cli.py  config.py  errors.py  gates.py  jsonio.py  models.py  paths.py  phases.py  state_machine.py  status.py
docs/: PARA-FABIO.md  build-plan.md  fabio-setup-checklist.md  notion-schema-spec.md
episodes/: README.md
orchestrator/: README.md  __init__.py  showrunner.py
scripts/: README.md  __init__.py  ffmpeg_ops.py  tooling.py  whisper_ops.py
state/: README.md
tests/: base.py  test_adapters.py  test_agents.py  test_misc.py  test_scripts.py  test_showrunner.py  test_state_machine.py
(+4 files in other folders)
